force-app/main/default/objects/Task__c/fields/Billing_Rule__c.field-meta.xml
<CustomField>
    <fullName>Billing_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Rule</label>
    <referenceTo>Billing_Rule__c</referenceTo>
    <relationshipLabel>Billing Rules</relationshipLabel>
    <relationshipName>Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>